--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "vue": "^3.4.21"
     },
     "dependencies": {
-        "laravel-mix": "^6.0.49"
+        "cropperjs": "^1.6.1",
+        "dropzone": "^6.0.0-beta.2",
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
+        "quill": "^1.3.7"
     }
 }
