--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
         "cropperjs": "^1.6.1",
+        "download": "^8.0.0",
         "dropzone": "^6.0.0-beta.2",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
