--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.4.21"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^41.3.1",
         "@fortawesome/fontawesome-free": "^6.5.2",
         "cropperjs": "^1.6.1",
         "download": "^8.0.0",
